--- a/dbApplication/dbApplication.csproj
+++ b/dbApplication/dbApplication.csproj
@@ -71,8 +71,8 @@
     <Compile Include="Employee.cs">
       <DependentUpon>EmployeesDB.tt</DependentUpon>
     </Compile>
-    <Compile Include="EmployeeInfo.xaml.cs">
-      <DependentUpon>EmployeeInfo.xaml</DependentUpon>
+    <Compile Include="AddEmployee.xaml.cs">
+      <DependentUpon>AddEmployee.xaml</DependentUpon>
     </Compile>
     <Compile Include="EmployeeList.xaml.cs">
       <DependentUpon>EmployeeList.xaml</DependentUpon>
@@ -91,7 +91,7 @@
     <Compile Include="WorkingTime.cs">
       <DependentUpon>EmployeesDB.tt</DependentUpon>
     </Compile>
-    <Page Include="EmployeeInfo.xaml">
+    <Page Include="AddEmployee.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
