"AddEmployee" page action update. Application icon added

--- a/dbApplication/dbApplication.csproj
+++ b/dbApplication/dbApplication.csproj
@@ -132,6 +132,9 @@
   <ItemGroup>
     <Resource Include="bg.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="icon.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
